Add `/locations` endpoint to expose real-time bus GPS data via API and update documentation. Also fixed signalr processing and now background monitor rather than intercept responses.
